[gd_scene load_steps=3 format=3 uid="uid://c1huct0tfppsu"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_1oce0"]
[ext_resource type="PackedScene" uid="uid://dqysmi6dfsad1" path="res://main_menu.tscn" id="2_yfvsp"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1oce0")

[node name="MainMenu" parent="." instance=ExtResource("2_yfvsp")]
layout_mode = 1
script = null

[connection signal="pressed" from="MainMenu/PanelContainer/Panel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/Panel/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/Panel/QuitButton" to="." method="_on_quit_button_pressed"]

[editable path="MainMenu"]
